<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/location"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_46"
        android:background="@color/colorSystem"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/space_8"
        android:paddingLeft="@dimen/space_8"
        android:paddingRight="@dimen/space_8"
        android:paddingTop="@dimen/space_4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="@dimen/space_10"
            android:layout_weight="1"
            android:background="@drawable/common_white_bg_round"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/space_8">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/space_8"
                android:src="@drawable/home_search"/>

            <co.muslimummah.android.module.prayertime.ui.view.CleanEditText
                android:id="@+id/et_search"
                style="@style/Autocomplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FAFAFA"
                android:completionThreshold="1"
                android:hint="@string/please_enter_address"
                android:imeOptions="actionSearch"
                android:paddingLeft="@dimen/space_8"
                android:singleLine="true"
                android:textColor="#999999"
                android:textColorHint="#999999"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_search_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space_8"
            android:paddingRight="@dimen/space_8"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/normal_text_size"
            android:visibility="gone"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_bar_gradient"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_check_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#F9F9F9"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_no_internet"
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:layout_marginTop="23dp"
            android:contentDescription="@string/icon"/>

        <TextView
            android:id="@+id/tv_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="6dp"
            android:textColor="#BBBBBB"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_search_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F9F9F9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/history"
            android:textColor="#999999"
            android:textSize="16sp"
            android:visibility="gone"/>

        <View style="@style/line_horizontal_style"/>

        <ListView
            android:id="@+id/listView_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"/>


        <LinearLayout
            android:id="@+id/ll_clear_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_selector_bg"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_16"
            android:paddingTop="@dimen/space_16">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_search_empty"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/space_8"
                android:text="@string/clear_history"
                android:textAllCaps="false"
                android:textColor="#999999"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
