<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_dialog_pwd"
    android:layout_width="match_parent"
    android:layout_height="272dp"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_sel_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/icon"
            app:srcCompat="@drawable/vector_drawable_icon_place_green" />

        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/iv_location"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/select_your_location"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_loading_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pb_Normal"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:indeterminateDrawable="@drawable/progress_bar_gradient" />

        <TextView
            android:id="@+id/tv_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/pb_Normal"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/locating"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_rl_location"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/icon"
                app:srcCompat="@drawable/vector_drawable_icon_place_green" />

            <TextView
                android:id="@+id/tv_change_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/iv_rl_location"
                android:layout_toRightOf="@+id/iv_rl_location"
                android:textColor="#1B5E20"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_change_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_below="@+id/ll_change"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/change_location"
            android:textColor="@color/grey"
            android:textSize="14sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_not_found_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_not_found"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_icon_notfound_green" />

        <TextView
            android:id="@+id/tv_not_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/img_not_found"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/no_result_found"
            android:textColor="@color/grey"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="153dp"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/btn_dialogOne"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_click_round_one"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_dialogTwo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/btn_dialogOne"
            android:background="@drawable/button_click_round_two"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>