<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/setting_label"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingEnd="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingStart="24dp"
        android:text="@string/setting"
        android:textColor="@color/green_primary"
        android:textSize="14dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/grey_quaternary" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_bookmarks"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="24dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/bookmarks"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_bookmarks_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="end"
                    android:textColor="@color/grey"
                    android:textSize="14dp"
                    tools:text="2" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ic_grey_arrow_to_right"
                    app:srcCompat="@drawable/ic_grey_arrow_to_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:background="@color/grey_quaternary" />

            <co.muslimummah.android.module.quran.view.QuranSettingTranslationView
                android:id="@+id/qstv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="24dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/transliteration"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_transliteration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:theme="@style/MDSwitch"
                    app:switchMinWidth="30dp"
                    app:theme="@style/MDSwitch"
                    tools:checked="false" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:background="@color/grey_quaternary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="24dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/audio_text_sync"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_audio_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:theme="@style/MDSwitch"
                    app:switchMinWidth="30dp"
                    app:theme="@style/MDSwitch"
                    tools:checked="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:background="@color/grey_quaternary" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</merge>